style improvements